--- a/templates/fanDesign.html
+++ b/templates/fanDesign.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="flex-fill text-center py-4">
                             <p class="fs-5 fw-bold m-0">Rotación Actual</p>
-                            <p class="fs-6" id="rendimiento_ventilador">{{ rendimiento_ventilador }} Hz</p>
+                            <p class="fs-6" id="rendimiento_ventilador">{{ rotacion_actual }} Hz</p>
                         </div>
                     </div>
                 </div>
