--- a/templates/widgets/currentStatus/current_data.html
+++ b/templates/widgets/currentStatus/current_data.html
@@ -1,7 +1,7 @@
 <div class="row py-4 d-flex justify-content-evenly align-items-center">
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
       <div class="col  border-end border-3 border-success">Presión total ventilador (Pa)</div>
-      <div class="col  text-center m-auto" id="pt1"></div>
+      <div class="col  text-center m-auto" id="ps1"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
       <div class="col border-end border-3 border-success">Caudal ventilador (m³/s) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
@@ -17,7 +17,7 @@
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
       <div class="col border-end border-3 border-success">Presión estática ventilador  (Pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
-      <div class="col text-center m-auto" id="pe"></div>
+      <div class="col text-center m-auto" id="densidad1"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
       <div class="col border-end border-3 border-success">Presión dinámica ventilador (Pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
