--- a/templates/widgets/home/components/Header.html
+++ b/templates/widgets/home/components/Header.html
@@ -10,14 +10,14 @@
                         <th>Curva de Diseño</th>
                         <th>Ducto</th>
                         <th>Codos</th>
-                        <th>Caudal Requerido</th>
+                        <th>Caudal Requerido (m³/s)</th>
                         <th>Ancho Galería (m)</th>
                         <th>Alto Galería (m)</th>
                         <th>Área Galería (m²)</th>
                         <th>Nivel Carga</th>
                         <th>Tipo Trabajo</th>
                         <th>Factor (%)</th>
-                        <th>Potencia (%)</th>
+                        <th>Potencia (HP)</th>
                         <th>Dis E Sens</th>
                         <th>LF</th>
                         <th>Sistema de Partida</th>
