--- a/templates/widgets/home/components/V7.html
+++ b/templates/widgets/home/components/V7.html
@@ -1,15 +1,15 @@
-<div class="row align-items-start my-4" style="background-color: #FFF4D6; padding: 10px; border: 1px solid #000;">
+<div class="row align-items-start my-4" style="background-color: #ffffff;">
     <!-- Información de Estado y Descripción -->
     <div class="col-md-5">
         <table class="table table-bordered mb-0">
             <thead>
-                <tr class="text-center fw-bold" style="background-color: #FFF4D6;">
+                <tr class="text-center fw-bold" style="background-color: #ffffff;">
                     <th colspan="4">Potencia</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="3" class="align-middle text-center" style="width: 100px; background-color: #FFF4D6;">
+                    <td rowspan="3" class="align-middle text-center" style="width: 100px; background-color: #ffffff;">
                         <h1 class="display-1 fw-bold m-0">7</h1>
                     </td>
                     <td>Estado</td>
@@ -31,7 +31,7 @@
     <!-- Rango de Potencia -->
     <div class="col-md-3">
         <table class="table table-bordered mb-0">
-            <thead class="text-center fw-bold" style="background-color: #FFF4D6;">
+            <thead class="text-center fw-bold" style="background-color: #ffffff;">
                 <tr>
                     <th>Potencia instalada</th>
                     <th>Potencia consumida</th>
@@ -45,7 +45,7 @@
             </tbody>
         </table>
         <table class="table table-bordered mt-2">
-            <thead class="text-center fw-bold" style="background-color: #FFF4D6;">
+            <thead class="text-center fw-bold" style="background-color: #ffffff;">
                 <tr>
                     <th>Limites potencia</th>
                     <th>Valor</th>
