--- a/templates/widgets/home/components/V6.html
+++ b/templates/widgets/home/components/V6.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="row align-items-start my-4" style="background-color: #ffffff;">
     <div class="row align-items-start my-4">
         <!-- Estado y Fugas -->
         <div class="col-md-5">
